fixed map on mobile

--- a/resources/css/queries.scss
+++ b/resources/css/queries.scss
@@ -82,6 +82,10 @@
         width: 100%;
         margin-left: 0%;
     }
+    .map{
+        margin-left: -120px;
+       
+    }
 
     
 }
